--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 PORT=4000
 
 # NODE MAILER
-USER=your_email
-PASS=your_email_password
+USER_MAIL=your_email
+MAIL_PASS=your_email_password
 
 # DATABASE
 HOST=localhost
